--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <button onclick="startGame()">Start Game</button>
         <button id="new-el" onclick="newCard()">New Card</button>
         <p id="player-el"></p>
+          <p>Help</p>
       </div>
         <script src="index.js"></script>
+        
     </body>
 </html>
